[ fix ] overlapping logos (take 2)

--- a/2024-strathclyde/strath.css
+++ b/2024-strathclyde/strath.css
@@ -11,6 +11,7 @@
 .logos {
     display: grid;
     align-items: center;
+    gap: 20px;
     grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
 }
 .logos img {
